Changed to joint impedance control for execution, and added chicken head control feature

--- a/TrajectoryExecution/CMakeLists.txt
+++ b/TrajectoryExecution/CMakeLists.txt
@@ -5,7 +5,7 @@ add_library(TrajectoryExecution
     src/Filter.cpp
     src/Fwd_kinematics.cpp
     src/Jacobian.cpp
-    src/KinovaTrajectory.cpp
+    # src/KinovaTrajectory.cpp
 )
 
 # Make headers available to other targets
