Refactored replanning methods, added more steps to the program, increases re-try amount for each optimization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -184,7 +184,7 @@ add_project_executable(main main.cpp)
 add_project_executable(test_vicon_subject test_vicon_subject.cpp)
 # add_project_executable(test_kinova test_kinova.cpp)
 # add_project_executable(test_task_impedance test_task_impedance.cpp)
-add_project_executable(test_joint_impedance test_joint_impedance.cpp)
+# add_project_executable(test_joint_impedance test_joint_impedance.cpp)
 # add_project_executable(test_joint_position test_joint_position.cpp)
 add_project_executable(test_generation_and_joint_position test_generation_and_joint_position.cpp)
 # add_project_executable(test_pose_1 test_pose_1.cpp)
