--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,7 +186,7 @@ add_project_executable(test_vicon_subject test_vicon_subject.cpp)
 # add_project_executable(test_task_impedance test_task_impedance.cpp)
 # add_project_executable(test_joint_impedance test_joint_impedance.cpp)
 # add_project_executable(test_joint_position test_joint_position.cpp)
-add_project_executable(test_generation_and_joint_position test_generation_and_joint_position.cpp)
+# add_project_executable(test_generation_and_joint_position test_generation_and_joint_position.cpp)
 # add_project_executable(test_pose_1 test_pose_1.cpp)
 # add_project_executable(workspace_analysis workspace_analysis.cpp)
 # add_project_executable(test_sleep test_sleep.cpp)
